apply plugin: 'java-library'

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'org.jetbrains:annotations:15.0'
}

sourceCompatibility = "1.8"
targetCompatibility = "1.8"